# aw3d30-parquet

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/: bors.toml
.github/workflows/: assets.yml  release.yml  rust.yml
src/: main.rs
