[package]
name = "aw3d30-parquet"
version = "0.3.0"
edition = "2018"
description = "Download ALOS World 3D 30 meter DEM GeoTIFFs and convert them to Parquet"

[dependencies]
futures = "0.3"
gdal = "0.9"
parquet = "5"
regex = "1"
rusoto_core = "0.47"
rusoto_s3 = "0.47"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
