[package]
name = "aw3d30-parquet"
version = "0.3.0"
edition = "2018"
description = "Download ALOS World 3D 30 meter DEM GeoTIFFs and convert them to Parquet"

[dependencies]
futures = "0.3"
gdal = { git = "https://github.com/georust/gdal.git", rev = "6ad95e7f977f5ef69d835d3507c93b884e4ae8ae" } # "0.9"
parquet = "6"
regex = "1"
rusoto_core = "0.47"
rusoto_s3 = "0.47"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
